Archive2/ef/3c6ebca0b28682/output
main.cpp:4:69: error: invalid static_cast from type 'int' to type 'const void*'
     static constexpr const void* noop = static_cast<const void*>(0x1);
                                                                     ^
